tests/js_error/stack_trace/module_top_level_error.exp
Error: test
  ┌ tests/js_error/stack_trace/module_top_level_error.js:2:9
  |
2 |   throw new Error('test');
  |         ^
Stack trace:
  at foo (tests/js_error/stack_trace/module_top_level_error.js:2:9)
  at <module> (tests/js_error/stack_trace/module_top_level_error.js:5:1)